Minor changes/edits to providers notebook

--- a/notebooks/providers_deepdive.ipynb
+++ b/notebooks/providers_deepdive.ipynb
@@ -4,7 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# A full look into `providers` objects"
+    "# A full look into `providers` objects\n",
+    "\n",
+    "\n",
+    "One of the benefits of `contextily` is that it interfaces with the popular XYZ tiling standard. This means that any tiles provided through this format can be accessed. To make your life easier, `contextily` comes with a set of providers already included that makes including their maps much more straightforward and does not require you know any of the pesky details of the interface. These are all stored in the `contextily.providers` submodule, which also defines the specification `contextily` uses to store these so you can mimic it with an alternative provider that may not be built-in. This notebook will take a look at the submodule, illustrating how it works, what's available and how you can expand it if needed. \n"
    ]
   },
   {
@@ -24,9 +27,7 @@
    "source": [
     "## Choosing a web tile provider\n",
     "\n",
-    "As shown in the intro guide, the `contextily.providers` submodule provides access to a whole set of providers of web tiles. \n",
-    "\n",
-    "By default, the Stamen Terrain backgroun is used:"
+    "By default, if the user does not specify anything in this respect, the Stamen Terrain background is used:"
    ]
   },
   {
@@ -67,9 +68,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "But this can be changed by specifying a provider with the `source` keyword.\n",
+    "The default can be modified by specifying a different provider with the `source` keyword.\n",
     "\n",
-    "Using a different Stamen background:"
+    "For example, to use Stamen's Toner Lite theme:"
    ]
   },
   {
@@ -100,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    ".. or the OpenStreetMap background:"
+    "Or the main theme by OpenStreetMap:"
    ]
   },
   {
@@ -138,7 +139,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The provider objects being passed to `add_basemap` are stored as dictionaries (with attribute access for easy access), so we can explore them in Python (or using tab completion in an interactive session):"
+    "The provider objects being passed to `add_basemap` are stored as dictionaries (with attribute access for easy access), so we can explore them in Python (or using tab completion in an interactive session!):"
    ]
   },
   {
@@ -192,7 +193,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Looking at a single one of those options, for example \"Mapnik\" (the default OpenStreetMap background), we can see this is a TileProvider object, which behaves as a dict:"
+    "Looking at a single one of those options, for example \"Mapnik\" (the default OpenStreetMap background), we can see this is a `TileProvider` object, which behaves as a dict:"
    ]
   },
   {
@@ -213,6 +214,13 @@
    ],
    "source": [
     "type(ctx.providers.OpenStreetMap.Mapnik)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can explore its contents:"
    ]
   },
   {
@@ -242,7 +250,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "So in the end, a \"provider object\" is a dictionary that has the url (required, with `{z}/{x}/{y}` to be replaced), with some additional metadata information (optional). Those additional properties can be the attribution text to be used on the plot, or the maximum zoom level available for this provider, etc. When this information is available, it will be used automatically by contextily."
+    "A \"provider object\" is then a dictionary with a few required entries, such as the url (required, with `{z}/{x}/{y}` to be replaced), with some additional metadata information (optional). These can be the attribution text to be used on the plot (`attribution`), or the maximum zoom level available for these tiles (`max_zoom`). When this information is available, `contextily` is smart enough to access and use it automatically."
    ]
   },
   {
@@ -356,7 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since the provider definition is basically nothing more than an url with the `{z}/{x}/{y}` format, you can also specify such an url manually, in case the provider of your choice is not available in contextily (the provider is expected to follow the standard XYZ tile protocol):"
+    "Since the provider definition is basically nothing more than an url with the `{z}/{x}/{y}` format, you can also specify such an url manually, in case the provider of your choice is not available in `contextily` (the provider is expected to follow the standard XYZ tile protocol):"
    ]
   },
   {
@@ -395,14 +403,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Overview of providers"
+    "## Overview of built-in providers"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Creating a flat dict of the providers:"
+    "Let us create a flat dictionary of the built-in providers:"
    ]
   },
   {
@@ -421,6 +429,13 @@
     "            get_providers(prov)\n",
     "\n",
     "get_providers(ctx.providers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This results in quite a few of them already available:"
    ]
   },
   {
@@ -444,13 +459,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For this illustration, let's single out the following ones:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "selection = ['OpenStreetMap.Mapnik', 'OpenTopoMap', 'Stamen.Toner', 'Stamen.TonerLite', 'Stamen.Terrain', 'Stamen.TerrainBackground', 'Stamen.Watercolor',\n",
-    " 'NASAGIBS.ViirsEarthAtNight2012', 'CartoDB.Positron', 'CartoDB.Voyager']"
+    "selection = ['OpenStreetMap.Mapnik', \n",
+    "             'OpenTopoMap', \n",
+    "             'Stamen.Toner', \n",
+    "             'Stamen.TonerLite', \n",
+    "             'Stamen.Terrain', \n",
+    "             'Stamen.TerrainBackground', \n",
+    "             'Stamen.Watercolor', \n",
+    "             'NASAGIBS.ViirsEarthAtNight2012', \n",
+    "             'CartoDB.Positron', \n",
+    "             'CartoDB.Voyager'\n",
+    "            ]"
    ]
   },
   {
@@ -482,20 +513,13 @@
     "plt.show()\n",
     "fig.savefig(\"tiles.png\", bbox_inches=\"tight\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (geo-dev)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "geo-dev"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -507,7 +531,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.1"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
